# nwnx4-plugin-tlk

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: cplugin.rs  lib.rs  nwnx_tlk.nss  nwnx_tlk_unittest.nss  xp_tlk_unittest.nss
