[package]
name = "xp_tlk"
version = "0.1.0"
authors = ["Crom (Thibaut CHARLES) <CromFr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwn-lib-rs = { git = "https://gitlab.com/CromFr/nwn-lib-rs.git", branch = "main" }
git-version = "0.3.5"
log = "0.4.17"
flexi_logger = "0.22.5"

